generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum Activity {
  /// Correction when done through the Product Admin UI extension
  CORRECTION @map("Correction")

  /// Goods RECEIPT when receiving a purchase order
  GOODS_RECEIPT @map("Goods RECEIPT")

  /// Movement when moving stock from one bin to another
  MOVEMENT @map("Movement")

  /// Putaway when moving stock from RECEIVING to a storage bin
  PUTAWAY @map("Putaway")

  /// Picking when picking a customer order or batch
  PICKING @map("Picking")

  /// Goods Issue when stock is removed after fulfillment
  GOODS_ISSUE @map("Goods Issue")

  /// Inv Counting when qty changes due to inventory count discrepancy
  INV_COUNTING @map("Inv Counting")
}

model store_integration {
  store_domain String @id @default("ezokofishing.myshopify.com")
  access_token String
}

model StockMovementLog {
  id                  String   @id @default(uuid())
  createdAt           DateTime @default(now()) @map("created_at")
  user                String?
  activity            Activity
  barcode             String?
  variantTitle        String?  @map("variant_title")
  /// Source location (blank for Correction)
  srcLocation         String?  @map("src_location")
  srcQty              Int?     @map("src_qty")
  /// Destination location (blank for Goods Issue)
  destinationLocation String?  @map("destination_location")
  /// Destination qty (blank for Goods Issue)
  destinationQty      Int?     @map("destination_qty")
  /// Reference document (blank for Admin UI)
  referenceDoc        String?  @map("reference_doc")

@@map("stock_movement_logs")
}

model UserSession {
  id               String   @id @default(uuid())
  shopifyUserId    String   @unique @map("shopify_user_id")
  shopifyUserEmail String   @map("shopify_user_email")
  shopifyUserName  String   @map("shopify_user_name")
  sessionToken     String   @unique @map("session_token")
  accessToken      String   @map("access_token")
  expiresAt        DateTime @map("expires_at")
  createdAt        DateTime @default(now()) @map("created_at")

  @@index([sessionToken])
  @@index([shopifyUserId])
  @@map("user_sessions")
}

model PoHeader {
  poNumber              BigInt    @id @default(autoincrement()) @map("po_number") @db.BigInt
  vendor                String    @db.Text
  status                String    @default("OPEN") @db.Text
  creationUser          String    @map("creation_user") @db.Text
  createdAt             DateTime  @map("created_at") @db.Timestamptz(6)
  importDuties          Boolean   @default(false) @map("import_duties")
  importType            String    @default("NO_IMPORT") @map("Import_type") @db.Text
  expectedDate          DateTime? @map("expected_date") @db.Date
  shippingFees          Decimal?  @map("shipping_fees") @db.Decimal(12, 2)
  purchaseOrderCurrency String?   @default("CAD") @map("shipping_fees_currency") @db.Char(3)
  notes                 String?   @map("Notes") @db.Text

  items PoItem[]
  scope PoShopScope?

  @@index([vendor])
  @@index([status])
  @@index([createdAt])
  @@index([expectedDate])
  @@map("po_header")
}

model PoItem {
  poNumber             BigInt    @map("po_number") @db.BigInt
  poItem               Int       @map("po_item")
  productTitle         String    @map("product_title") @db.Text
  variantTitle         String    @map("variant_title") @db.Text
  sku                  String?   @db.Text
  orderQty             Int       @default(1) @map("order_qty")
  receivedQty          Int?      @default(0) @map("received_qty")
  status               String    @default("OPEN") @db.Text
  unitCost             Decimal?  @map("unit_cost") @db.Decimal(12, 2)
  lastReceivingDate    DateTime? @map("last_receiving_Date") @db.Timestamptz(6)
  lastModification     DateTime  @map("last_modification") @db.Timestamptz(6)
  lastModificationUser String    @map("last_modification_user") @db.Text

  header PoHeader @relation(fields: [poNumber], references: [poNumber], onDelete: Restrict, onUpdate: Cascade)

  @@id([poNumber, poItem])
  @@index([poNumber])
  @@index([poItem])
  @@index([productTitle])
  @@index([variantTitle])
  @@index([sku])
  @@index([status])
  @@map("po_item")
}

model ShopInstallation {
  shop                 String   @id @db.Text
  encryptedAccessToken String   @map("encrypted_access_token") @db.Text
  scopes               String?  @db.Text
  createdAt            DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt            DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@map("shop_installation")
}

model ShopifyVendorCache {
  shop        String   @id @db.Text
  vendors     Json
  refreshedAt DateTime @map("refreshed_at") @db.Timestamptz(6)

  @@map("shopify_vendor_cache")
}

model UserPrefs {
  shop      String   @db.Text
  userId    String   @map("user_id") @db.Text
  filters   Json?
  sorting   Json?
  updatedAt DateTime @default(now()) @map("updated_at") @db.Timestamptz(6)

  @@id([shop, userId])
  @@map("user_prefs")
}

model PoShopScope {
  poNumber BigInt @id @map("po_number") @db.BigInt
  shop     String @db.Text

  header PoHeader @relation(fields: [poNumber], references: [poNumber], onDelete: Cascade, onUpdate: Cascade)

  @@index([shop])
  @@map("po_shop_scope")
}
